# MONSDA

./: .Rhistory  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  Configurator.py  Guide.py  Guide4.py  MANIFEST.in  NextSnakes.py  README.md  RunNextflow.py  RunSnakemake.py  Snakefile  config_DTU_DE_cutoff.json  config_mir124_4.json  environment.yml  prepare.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
MONSDA/: Configurator.py  Logger.py  Params.py  RunMONSDA.py  Utils.py  Workflows.py  __main__.py  _version.py  web_configurator.py
NextSnakes/: Configurator.py  Logger.py  Params.py  RunNextSnakes.py  Utils.py  Workflows.py  __init__.py  __main__.py  _version.py
cluster/: config_slurm.yaml  sge.sh
configs/: config_AD_bastel_2.json  config_bastel.json  config_bastel_privat.json  config_example.json  config_test.json  config_test_bwa.json  config_test_minimap.json  config_test_segemehl.json  config_test_star.json  skeleton.json  template.json  template_2.json  template_base_commented.json  template_clean.json  tutorial_de.json  tutorial_exhaustive.json  tutorial_postprocess.json  tutorial_quick.json  tutorial_toolmix.json
docs/: conf.py  index.rst  requirements.txt
envs/: LoveSonesonPatro.yaml  base.yaml  bbduk.yaml  bbmap.yaml  bedtools.yaml  bwa.yaml  bwa2.yaml  bwameth.yaml  ciri2.yaml  countreads.yaml  countreads_de.yaml  cutadapt.yaml  deseq2.yaml  deseq2_DE.yaml  dexseq.yaml  dexseq_DEU.yaml  dexseq_DTU.yaml  diego.yaml  diego_DAS.yaml  dorado.yaml  drimseq_DTU.yaml  drimseq_DTU_better.yaml  edger.yaml  edger_DAS.yaml  edger_DE.yaml  edger_DEU.yaml  fastp.yaml  fastqc.yaml  fgumi.yaml  guppy.yaml  hisat2.yaml  index.yaml  isoformswitchanalyzer.yaml  kallisto.yaml  macs.yaml  macs2.yaml  macs3.yaml  mapping_env.yml  minimap.yaml  monsda.yaml  (+30 more)
lib/: Collection.groovy  Collection.py  Deprecated.py  Logger.py  Params.py  Workflows.py
profile_nextflow/: nextflow.config
profile_snakemake/: cluster_config.yaml  config.v8+.yaml  config.yaml  slurm-status.py  slurm-submit.py  slurm_utils.py
slurm/: config.yaml  slurm-submit-advanced.py  slurm-submit.py
tests/: TestCondaEnvs.sh  cicd_test.sh  conftest.py  manual_test.sh  multitool.json  test_Utils.py  test_fgumi_smoke.sh  test_functions.py  (+3 more)
(+374 files in other folders)
